xml/src2/objects/Course_Record__c.object
<CustomObject>
    <fields>
        <fullName>Amount_Other_Specify__c</fullName>
        <label>Amount (Other/Specify)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount_Paid__c</fullName>
        <inlineHelpText>Enter amount candidate paid to GBHEM</inlineHelpText>
        <label>Amount Paid</label>
        <picklist>
            <picklistValues>
                <fullName>150.00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>175.00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other/Specify</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Catalog_ID__c</fullName>
        <inlineHelpText>Enter school&apos;s course id including course number</inlineHelpText>
        <label>Catalog ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Class_Type__c</fullName>
        <inlineHelpText>Select type that best describes course medium</inlineHelpText>
        <label>Class Type</label>
        <picklist>
            <picklistValues>
                <fullName>Classroom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Correspondence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hybrid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Person</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <description>Contact Registered for the courses</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Course Record</relationshipLabel>
        <relationshipName>Course_Record</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Course_Date__c</fullName>
        <inlineHelpText>Enter date course was completed</inlineHelpText>
        <label>Course Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Course_Name__c</fullName>
        <description>Course name on Course record</description>
        <formula>Course__r.Name__c</formula>
        <label>Course Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Course</label>
        <referenceTo>Courses__c</referenceTo>
        <relationshipLabel>Course Records</relationshipLabel>
        <relationshipName>Course_Records</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Credit_Hour_Types__c</fullName>
        <description>credit hours types for each of the courses</description>
        <label>Credit Hour Types</label>
        <picklist>
            <picklistValues>
                <fullName>Credit Hours</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GBHEM Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarter Hours</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Semester Hours</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Units</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Credit_Hours__c</fullName>
        <description>credit hours for each of the courses</description>
        <inlineHelpText>Enter number of credit hours for course. If unknown, enter 0</inlineHelpText>
        <label>Credit Hours</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GBHEM_DataCenter_CoursePerson_Amount__c</fullName>
        <description>Historical field</description>
        <inlineHelpText>Historical field course_person.amount</inlineHelpText>
        <label>GBHEM DataCenter CoursePerson_Amount</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GBHEM_DataCenter_School_Name__c</fullName>
        <description>Data Center historical value</description>
        <inlineHelpText>Enter only information for the Data Center</inlineHelpText>
        <label>GBHEM DataCenter School Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBHEM_DataCenter_Voucher_Number__c</fullName>
        <description>Course Person Voucher Number</description>
        <inlineHelpText>Course Person Voucher Number</inlineHelpText>
        <label>GBHEM DataCenter Voucher Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBHEM_DataCenter_grade__c</fullName>
        <description>GBHEM DataCenter: table = course_person field = grade</description>
        <inlineHelpText>Enter only information for the Data Center</inlineHelpText>
        <label>GBHEM DataCenter grade</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grade__c</fullName>
        <label>Grade</label>
        <picklist>
            <picklistValues>
                <fullName>A+</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A-</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B+</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B-</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C+</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C-</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D+</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D-</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trans Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Grader_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The contact who graded the paper.</description>
        <inlineHelpText>Enter name of person who graded paper</inlineHelpText>
        <label>Grader Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Course Record (Grader Contact)</relationshipLabel>
        <relationshipName>Course_Record_Grader</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Paper_Received_Date__c</fullName>
        <label>Paper Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Paper_Returned_Date__c</fullName>
        <label>Paper Returned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Paper_Sent_to_Grader_Date__c</fullName>
        <description>The date the paper was sent to be graded.</description>
        <inlineHelpText>The date the paper was sent to be graded.</inlineHelpText>
        <label>Paper Sent to Grader Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Report_Enroll_Year__c</fullName>
        <description>For Reporting on COS Transcript for each of the Individual</description>
        <formula>IF ( ISPICKVAL( Class_Type__c ,&apos;In Person&apos;) ,  TEXT(Course_Date__c ) ,  IF( ISPICKVAL( Class_Type__c ,&apos;Correspondence&apos;) , TEXT(YEAR(Course_Date__c) ), null ) )</formula>
        <label>Enroll/Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scholarship_Amount__c</fullName>
        <description>Suggested Scholarship Amount above is based on $200.00 per Credit hour.</description>
        <inlineHelpText>Enter scholarship amount paid to candidate</inlineHelpText>
        <label>Scholarship Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Scholarship_Date__c</fullName>
        <inlineHelpText>Enter date of scholarship status event</inlineHelpText>
        <label>Scholarship Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Scholarship_Full_Check_Amount__c</fullName>
        <inlineHelpText>Enter total of scholarship amount paid to school</inlineHelpText>
        <label>Scholarship Full Check Amount</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Scholarship_Status__c</fullName>
        <label>Scholarship Status</label>
        <picklist>
            <picklistValues>
                <fullName>Applied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Declined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Processed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>School__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Enter name of institution</inlineHelpText>
        <label>School</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Course Record</relationshipLabel>
        <relationshipName>Course_Contact_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Suggested_Scholarship_Amount__c</fullName>
        <description>Course Credit hours x 200</description>
        <formula>IF(ISNULL( Credit_Hours__c ), 0, IF( NOT(ISPICKVAL( Scholarship_Status__c , &apos;Declined&apos;)),  Credit_Hours__c  * 200, 0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Suggested Scholarship Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Course Record</label>
    <nameField>
        <displayFormat>CR-{00000000}</displayFormat>
        <label>Course Record ID</label>
        <type>AutoNumber</type>
    </nameField>
    <namedFilters>
        <fullName>nf_01IJ000000009eoMAA_00NJ0000000GKnaMAG</fullName>
        <active>true</active>
        <field>Education_Information__c.Report_Course_Record__c</field>
        <filterItems>
            <field>$Source.Education_Type__c</field>
            <operation>equals</operation>
            <value>Local Pastor Licensing</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Education Information_R_Course Record</name>
        <sourceObject>Education_Information__c</sourceObject>
    </namedFilters>
    <pluralLabel>Course Record</pluralLabel>
    <recordTypes>
        <fullName>BGTS</fullName>
        <active>true</active>
        <description>Basic Graduate Theological Study Courses</description>
        <label>BGTS</label>
    </recordTypes>
    <recordTypes>
        <fullName>CourseRecord_AdvCOS</fullName>
        <active>true</active>
        <description>Courses that enable a local pastor to meet educational requirements</description>
        <label>Advanced Course of Study</label>
    </recordTypes>
    <recordTypes>
        <fullName>CourseRecord_COS</fullName>
        <active>true</active>
        <description>Any of the courses in the basic course of study program</description>
        <label>Course of Study</label>
    </recordTypes>
    <recordTypes>
        <fullName>CourseRecord_Cert_in_Specialized_Ministry</fullName>
        <active>true</active>
        <description>Courses for GBHEM Certification in a Specialized Ministry area</description>
        <label>Cert in Specialized Ministry</label>
    </recordTypes>
    <recordTypes>
        <fullName>CourseRecord_UM_Studies</fullName>
        <active>true</active>
        <description>Studies in United Methodist History, Doctrine, and Polity</description>
        <label>UM Studies</label>
    </recordTypes>
    <recordTypes>
        <fullName>Foundation</fullName>
        <active>true</active>
        <description>Courses to fulfill the requirements for becoming aDdiaconal Minister</description>
        <label>Foundation</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Amount_Other_Specify_Required_Rule_2</fullName>
        <active>true</active>
        <description>A value may be entered in &apos;Amount (Other/Specify)&apos; Only when the Value of &apos;Amount&apos; is set to &apos;Other/Specify&apos;</description>
        <errorConditionFormula>NOT(ISNULL( Amount_Other_Specify__c )) &amp;&amp; NOT(ISPICKVAL( Amount_Paid__c , &apos;Other/Specify&apos;))</errorConditionFormula>
        <errorDisplayField>Amount_Other_Specify__c</errorDisplayField>
        <errorMessage>A value may be entered in &apos;Amount (Other/Specify)&apos; Only when the Value of &apos;Amount&apos; is set to &apos;Other/Specify&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Amount_Paid_Is_Not_Other_Specify_Rule</fullName>
        <active>true</active>
        <description>If Amount Paid is not Other/Specify then set Amount Paid (Other/Specify) to null.</description>
        <errorConditionFormula>ISPICKVAL(Amount_Paid__c , &apos;Other/Specify&apos;) &amp;&amp; ISNULL(Amount_Other_Specify__c )</errorConditionFormula>
        <errorDisplayField>Amount_Other_Specify__c</errorDisplayField>
        <errorMessage>&apos;Amount (Other/Specify)&apos; must contain a value when amount paid is &apos;Other/Specify&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Contact_Cannot_Change_Rule</fullName>
        <active>true</active>
        <description>Cannot change Contact</description>
        <errorConditionFormula>ISCHANGED(Contact__c)</errorConditionFormula>
        <errorMessage>Cannot change Contact</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Contact_NotEqualTo_GradeContact</fullName>
        <active>true</active>
        <description>Contact and Grade Contact should 2 different contacts</description>
        <errorConditionFormula>Contact__c  =  Grader_Contact__c</errorConditionFormula>
        <errorMessage>Contact and Grade contact may not be Same</errorMessage>
    </validationRules>
</CustomObject>